[gd_scene load_steps=4 format=2]

[ext_resource path="res://Mob.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="Mob" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="MobHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MobDetectionArea" type="Area2D" parent="."]

[node name="MobDetectionAreaHitbox" type="CollisionShape2D" parent="MobDetectionArea"]
shape = SubResource( 2 )
